--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image:  mkuliaev/my-nginx-app:0.0.1  # Используем ваш образ
+          image:  mkuliaev/my-nginx-app:0.0.1  
           ports:
             - containerPort: 80
 
