--- a/my_app/Dockerfile
+++ b/my_app/Dockerfile
@@ -1,8 +1,8 @@
 # Dockerfile
 FROM nginx:1.23.1
 
-# Копируем статические файлы
+# Копи статические файлы
 COPY static/ /usr/share/nginx/html/
 
-# Копируем кастомный конфиг
+# Копи кастомный конфиг
 # COPY nginx.conf /etc/nginx/conf.d/default.conf
