--- a/my_app/nginx.conf
+++ b/my_app/nginx.conf
@@ -7,7 +7,8 @@ server {
         index index.html;
     }
 
-    location /static/ {
-        alias /usr/share/nginx/html/static/;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
