--- a/web-app--service.yaml
+++ b/web-app--service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kuliaev-diplom.ru
-  namespace: kuliaev-diplom
+  name: kuliaev-diplom-service
+  namespace: default
 spec:
   type: NodePort
   selector:
     app: web-app
   ports:
-    - protocol: TCP
-      port: 80
-      NodePort: 30885
+  - port: 80           # порт внутри кластера
+    targetPort: 80     # порт в контейнере
+    nodePort: 30081  
