--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,24 +26,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: |
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            IMAGE_TAG=latest
-          elif [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-            IMAGE_TAG=${GITHUB_TAG}
-          fi
-          docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
-        env:
-          GITHUB_TAG: ${{ github.ref_name }}
+      - name: Build and Push
+        uses: docker/build-push-action@v5
+        with:
+           context: .
+           file: .my_app/Dockerfile
+           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+           push: ${{ github.ref == 'refs/heads/main' }}
 
-      - name: Push Docker image
-        run: |
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            docker push $REGISTRY/$IMAGE_NAME:latest
-          elif [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-            docker push $REGISTRY/$IMAGE_NAME:${GITHUB_TAG}
-          fi
+        
 
   deploy:
     needs: build
