--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -17,26 +17,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Решает проблему с shallow clone
+          fetch-depth: 0
+
+      - name: Verify Dockerfile
+        run: |
+          ls -la my_app  # Проверка содержимого папки
+          if [ ! -f "my_app/Dockerfile" ]; then
+            echo "❌ Dockerfile not found in my_app directory!"
+            exit 1
+          fi
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3  # Обновленная версия
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3  # Обновленная версия
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker image
-        uses: docker/build-push-action@v5  # Используем современный action
+        uses: docker/build-push-action@v5
         with:
-          context: .
-          push: true
+          context: my_app  # Указываем папку с Dockerfile
+          file: my_app/Dockerfile  # Явный путь
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref == 'refs/heads/main' && 'latest' || github.ref_name }}
-          build-args: |
-            GITHUB_TAG=${{ github.ref_name }}
+          push: true
 
   deploy:
     needs: build
@@ -44,23 +51,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up kubectl
-        uses: azure/setup-kubectl@v3  # Обновленная версия
+        uses: azure/setup-kubectl@v3
         with:
           version: 'latest'
 
       - name: Configure kubeconfig
         run: |
-          # Если секрет base64-encoded
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > kubeconfig
-          # Если не encoded
-          # echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
+          echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
           export KUBECONFIG=$PWD/kubeconfig
 
       - name: Update deployment image
         run: |
           kubectl set image deployment/kuliaev-diplom.ru \
             kuliaev-diplom-nginx=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }} \
-            -n default  # Укажите нужный namespace
+            -n default
         env:
           REGISTRY: docker.io
           IMAGE_NAME: mkuliaev/my-nginx-app
