--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,14 +13,23 @@ on:
         required: true
         default: 'false'
 
+#jobs:
+#  terraform:
+#    runs-on: ubuntu-latest
+#    env:
+#      TF_VAR_token:     ${{ secrets.YC_TOKEN }}
+#      TF_VAR_cloud_id:  ${{ secrets.YC_CLOUD_ID }}
+#      TF_VAR_folder_id: ${{ secrets.YC_FOLDER_ID }}
+#      TF_VAR_ssh_public: ${{ secrets.SSH_PUBLIC }}
 jobs:
   terraform:
     runs-on: ubuntu-latest
     env:
-      TF_VAR_token:     ${{ secrets.YC_TOKEN }}
-      TF_VAR_cloud_id:  ${{ secrets.YC_CLOUD_ID }}
-      TF_VAR_folder_id: ${{ secrets.YC_FOLDER_ID }}
-      TF_VAR_ssh_public: ${{ secrets.SSH_PUBLIC }}
+      TF_VAR_yc_token:     ${{ secrets.YC_TOKEN }}       
+      TF_VAR_yc_cloud_id:  ${{ secrets.YC_CLOUD_ID }}    
+      TF_VAR_yc_folder_id: ${{ secrets.YC_FOLDER_ID }}   
+      TF_VAR_s3_access_key: ${{ secrets.S3_ACCESS_KEY }} 
+      TF_VAR_s3_secret_key: ${{ secrets.S3_SECRET_KEY }} 
 
     steps:
     - uses: actions/checkout@v4
