--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,9 @@
 #name: Terraform infra
-on:
-  push:
-    branches: [main]
-    paths: ['terraform/bucket/**']
-  pull_request:
+#on:
+# push:
+#    branches: [main]
+#    paths: ['terraform/bucket/**']
+#  pull_request:
     branches: [main]
     paths: ['terraform/bucket/**']
   workflow_dispatch:
@@ -21,8 +21,8 @@ on:
 #      TF_VAR_cloud_id:  ${{ secrets.YC_CLOUD_ID }}
 #      TF_VAR_folder_id: ${{ secrets.YC_FOLDER_ID }}
 #      TF_VAR_ssh_public: ${{ secrets.SSH_PUBLIC }}
-jobs:
-  terraform:
+#jobs:
+ # terraform:
     runs-on: ubuntu-latest
     env:
       TF_VAR_yc_token:     ${{ secrets.YC_TOKEN }}       
