--- a/web-app--service.yaml
+++ b/web-app--service.yaml
@@ -8,6 +8,6 @@ spec:
   selector:
     app: web-app
   ports:
-  - port: 80           # порт внутри кластера
-    targetPort: 80     # порт в контейнере
+  - port: 80           
+    targetPort: 80    
     nodePort: 30081  
